
<resources>
    <string name="app_name">lab5</string>
    <string name="original_photo_placeholder">original</string>
    <string name="modefied_photo_placeholder">modified</string>
    <string name="red_photo_placeholder">red</string>
    <string name="green_photo_placeholder">green</string>
    <string name="blue_photo_placeholder">blue</string>
    <string name="original_photo_caption">Original</string>
    <string name="red_photo_caption">Red</string>
    <string name="green_photo_caption">Green</string>
    <string name="blue_photo_caption">Blue</string>
    <string name="alpha_placeholder">0.00</string>
    <string name="decrease_alpha">&lt;&lt;</string>
    <string name="increase_alpha">&gt;&gt;</string>
    <string name="task1_button">Inverse image</string>
    <string name="task2_button">Apply a color filter</string>
    <string name="task3_button">Split by colors</string>
    <string name="task4_button">Image overlay</string>
    <string name="task5_button">Filters</string>
    <string name="task5_original_button">Original</string>
    <string name="task5_blur_button">Blur</string>
    <string name="task5_sharpness_button">Sharpness</string>
    <string name="task5_median_button">Median</string>
    <string name="task5_growingUp_button">Growing up</string>
    <string name="task5_sobel_button">Sobel</string>
</resources>