<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/inverse_image"
            style="@style/main_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task1_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/apply_a_color_filter"
            style="@style/main_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task2_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/split_by_colors"
            style="@style/main_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task3_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/image_overlay"
            style="@style/main_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task4_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button5"
            style="@style/main_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task5_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button6"
            style="@style/main_activity_button"
            android:text="@string/task6_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>